--- a/frameworks/go-gin-server/pkg/rest/server/daos/clients/sql/sqlite-client.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/daos/clients/sql/sqlite-client.go.tmpl
@@ -29,7 +29,7 @@ func NewSQLiteClient(db *sql.DB) *SQLiteClient {
 
 func (r *SQLiteClient) Migrate() error {
 	query := `
-	CREATE TABLE IF NOT EXISTS {{.ResourceNamePlural}}(
+	CREATE TABLE IF NOT EXISTS {{.SmallResourceNamePlural}}(
 		Id INTEGER PRIMARY KEY AUTOINCREMENT,
         {{range $k, $v := .CreateQueryColumns}}
         {{$k}} {{$v}} NOT NULL,
@@ -40,8 +40,8 @@ func (r *SQLiteClient) Migrate() error {
 	return err
 }
 
-func (r *SQLiteClient) Create(m models.{{.ResourceName}}) (*models.{{.ResourceName}}, error) {
-	insertQuery := "INSERT INTO {{.ResourceNamePlural}}({{.InsertQueryColumns}})values({{.InsertQueryParams}})"
+func (r *SQLiteClient) Create(m models.{{.CapsResourceNameSingular}}) (*models.{{.CapsResourceNameSingular}}, error) {
+	insertQuery := "INSERT INTO {{.SmallResourceNamePlural}}({{.InsertQueryColumns}})values({{.InsertQueryParams}})"
 	res, err := r.db.Exec(insertQuery, {{.InsertQueryExecColumns}})
 	if err != nil {
 		var sqliteErr sqlite3.Error
@@ -62,8 +62,8 @@ func (r *SQLiteClient) Create(m models.{{.ResourceName}}) (*models.{{.ResourceNa
 	return &m, nil
 }
 
-func (r *SQLiteClient) All() ([]models.{{.ResourceName}}, error) {
-	selectQuery := "SELECT * FROM {{.ResourceNamePlural}}"
+func (r *SQLiteClient) All() ([]models.{{.CapsResourceNameSingular}}, error) {
+	selectQuery := "SELECT * FROM {{.SmallResourceNamePlural}}"
 	rows, err := r.db.Query(selectQuery)
 	if err != nil {
 		return nil, err
@@ -72,25 +72,25 @@ func (r *SQLiteClient) All() ([]models.{{.ResourceName}}, error) {
 		_ = rows.Close()
 	}(rows)
 
-	var all []models.{{.ResourceName}}
+	var all []models.{{.CapsResourceNameSingular}}
 	for rows.Next() {
-		var m models.{{.ResourceName}}
+		var m models.{{.CapsResourceNameSingular}}
     	if err := rows.Scan(&m.Id, {{.GetQueryExecColumns}}); err != nil {
 			return nil, err
 		}
 		all = append(all, m)
 	}
 	if all == nil {
-		all = []models.{{.ResourceName}}{}
+		all = []models.{{.CapsResourceNameSingular}}{}
 	}
 	return all, nil
 }
 
-func (r *SQLiteClient) Get(id int64) (*models.{{.ResourceName}}, error) {
-	selectQuery := "SELECT * FROM {{.ResourceNamePlural}} WHERE Id = ?"
+func (r *SQLiteClient) Get(id int64) (*models.{{.CapsResourceNameSingular}}, error) {
+	selectQuery := "SELECT * FROM {{.SmallResourceNamePlural}} WHERE Id = ?"
 	row := r.db.QueryRow(selectQuery, id)
 
-	var m models.{{.ResourceName}}
+	var m models.{{.CapsResourceNameSingular}}
 	if err := row.Scan(&m.Id, {{.GetQueryExecColumns}}); err != nil {
 		if errors.Is(err, sql.ErrNoRows) {
 			return nil, ErrNotExists
@@ -100,11 +100,11 @@ func (r *SQLiteClient) Get(id int64) (*models.{{.ResourceName}}, error) {
 	return &m, nil
 }
 
-func (r *SQLiteClient) Update(id int64, m models.{{.ResourceName}}) (*models.{{.ResourceName}}, error) {
+func (r *SQLiteClient) Update(id int64, m models.{{.CapsResourceNameSingular}}) (*models.{{.CapsResourceNameSingular}}, error) {
 	if id == 0 {
 		return nil, errors.New("invalid updated ID")
 	}
-	updateQuery := "UPDATE {{.ResourceNamePlural}} SET {{.UpdateQueryColumnsAndParams}} WHERE Id = ?"
+	updateQuery := "UPDATE {{.SmallResourceNamePlural}} SET {{.UpdateQueryColumnsAndParams}} WHERE Id = ?"
     res, err := r.db.Exec(updateQuery, {{.UpdateQueryExecColumns}}, id)
 	if err != nil {
 		return nil, err
@@ -123,7 +123,7 @@ func (r *SQLiteClient) Update(id int64, m models.{{.ResourceName}}) (*models.{{.
 }
 
 func (r *SQLiteClient) Delete(id int64) error {
-	deleteQuery := "DELETE FROM {{.ResourceNamePlural}} WHERE Id = ?"
+	deleteQuery := "DELETE FROM {{.SmallResourceNamePlural}} WHERE Id = ?"
 	res, err := r.db.Exec(deleteQuery, id)
 	if err != nil {
 		return err
