--- a/frameworks/go-gin-server/pkg/rest/server/services/service.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/services/service.go.tmpl
@@ -6,37 +6,37 @@ import (
     log "github.com/sirupsen/logrus"
 )
 
-type {{.ResourceName}}Service struct {
-	{{.ResourceNameSingular}}Dao *daos.{{.ResourceName}}Dao
+type {{.CapsResourceNameSingular}}Service struct {
+	{{.SmallResourceNameSingular}}Dao *daos.{{.CapsResourceNameSingular}}Dao
 }
 
-func New{{.ResourceName}}Service() *{{.ResourceName}}Service {
-	{{.ResourceNameSingular}}Dao, err := daos.New{{.ResourceName}}Dao()
+func New{{.CapsResourceNameSingular}}Service() *{{.CapsResourceNameSingular}}Service {
+	{{.SmallResourceNameSingular}}Dao, err := daos.New{{.CapsResourceNameSingular}}Dao()
 	if err != nil {
 		log.Fatal(err)
 		return nil
 	}
-	return &{{.ResourceName}}Service{
-		{{.ResourceNameSingular}}Dao: {{.ResourceNameSingular}}Dao,
+	return &{{.CapsResourceNameSingular}}Service{
+		{{.SmallResourceNameSingular}}Dao: {{.SmallResourceNameSingular}}Dao,
 	}
 }
 
-func ({{.ResourceNameSingular}}Service *{{.ResourceName}}Service) Create{{.ResourceName}}({{.ResourceNameSingular}} models.{{.ResourceName}}) error {
-	return {{.ResourceNameSingular}}Service.{{.ResourceNameSingular}}Dao.Create{{.ResourceName}}({{.ResourceNameSingular}})
+func ({{.SmallResourceNameSingular}}Service *{{.CapsResourceNameSingular}}Service) Create{{.CapsResourceNameSingular}}({{.SmallResourceNameSingular}} models.{{.CapsResourceNameSingular}}) error {
+	return {{.SmallResourceNameSingular}}Service.{{.SmallResourceNameSingular}}Dao.Create{{.CapsResourceNameSingular}}({{.SmallResourceNameSingular}})
 }
 
-func ({{.ResourceNameSingular}}Service *{{.ResourceName}}Service) Update{{.ResourceName}}(id int64, {{.ResourceNameSingular}} models.{{.ResourceName}}) error {
-	return {{.ResourceNameSingular}}Service.{{.ResourceNameSingular}}Dao.Update{{.ResourceName}}(id, {{.ResourceNameSingular}})
+func ({{.SmallResourceNameSingular}}Service *{{.CapsResourceNameSingular}}Service) Update{{.CapsResourceNameSingular}}(id int64, {{.SmallResourceNameSingular}} models.{{.CapsResourceNameSingular}}) error {
+	return {{.SmallResourceNameSingular}}Service.{{.SmallResourceNameSingular}}Dao.Update{{.CapsResourceNameSingular}}(id, {{.SmallResourceNameSingular}})
 }
 
-func ({{.ResourceNameSingular}}Service *{{.ResourceName}}Service) Delete{{.ResourceName}}(id int64) error {
-	return {{.ResourceNameSingular}}Service.{{.ResourceNameSingular}}Dao.Delete{{.ResourceName}}(id)
+func ({{.SmallResourceNameSingular}}Service *{{.CapsResourceNameSingular}}Service) Delete{{.CapsResourceNameSingular}}(id int64) error {
+	return {{.SmallResourceNameSingular}}Service.{{.ResourceNameSingular}}Dao.Delete{{.CapsResourceNameSingular}}(id)
 }
 
-func ({{.ResourceNameSingular}}Service *{{.ResourceName}}Service) List{{.ResourceName}}s() ([]models.{{.ResourceName}}, error) {
-	return {{.ResourceNameSingular}}Service.{{.ResourceNameSingular}}Dao.List{{.ResourceName}}s()
+func ({{.ResourceNameSingular}}Service *{{.CapsResourceNameSingular}}Service) List{{.CapsResourceNamePlural}}() ([]models.{{.CapsResourceNameSingular}}, error) {
+	return {{.ResourceNameSingular}}Service.{{.ResourceNameSingular}}Dao.List{{.CapsResourceNamePlural}}()
 }
 
-func ({{.ResourceNameSingular}}Service *{{.ResourceName}}Service) Get{{.ResourceName}}(id int64) (models.{{.ResourceName}}, error) {
-	return {{.ResourceNameSingular}}Service.{{.ResourceNameSingular}}Dao.Get{{.ResourceName}}(id)
+func ({{.ResourceNameSingular}}Service *{{.CapsResourceNameSingular}}Service) Get{{.CapsResourceNameSingular}}(id int64) (models.{{.CapsResourceNameSingular}}, error) {
+	return {{.ResourceNameSingular}}Service.{{.ResourceNameSingular}}Dao.Get{{.CapsResourceNameSingular}}(id)
 }
