--- a/frameworks/go-grpc-server/go.sum.tmpl
+++ b/frameworks/go-grpc-server/go.sum.tmpl
@@ -1,4 +1,4 @@
-{{if .IsGRPCServer }}
+{{if .IsGrpcServer }}
 github.com/golang/protobuf v1.5.0/go.mod h1:FsONVRAS9T7sI+LIUmWTfcYkHO4aIWwzhcaSAoJOfIk=
 github.com/golang/protobuf v1.5.3 h1:KhyjKVUg7Usr/dYsdSqoFveMYd5ko72D+zANwlG1mmg=
 github.com/golang/protobuf v1.5.3/go.mod h1:XVQd3VNwM+JqD3oG2Ue2ip4fOMUkwXdXDdiuN0vRsmY=
