--- a/frameworks/go-grpc-server/pkg/grpc/server/daos/dao.go.tmpl
+++ b/frameworks/go-grpc-server/pkg/grpc/server/daos/dao.go.tmpl
@@ -7,56 +7,56 @@ import (
 	"google.golang.org/grpc/status"
 )
 
-var {{.ResourceNamePlural}} []models.{{.ResourceName}}
+var {{.SmallResourceNamePlural}} = make(map[int64]models.{{.CapsResourceNameSingular}})
 
-type {{.ResourceName}}Dao struct {}
+type {{.CapsResourceNameSingular}}Dao struct {}
 
-func ({{.ResourceNameSingular}}Dao *{{.ResourceName}}Dao) Create{{.ResourceName}}({{.ResourceNameSingular}} models.{{.ResourceName}}) error {
-	{{.ResourceNamePlural}} = append({{.ResourceNamePlural}}, {{.ResourceNameSingular}})
+func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Create{{.CapsResourceNameSingular}}({{.SmallResourceNameSingular}} models.{{.CapsResourceNameSingular}}) error {
+	{{.SmallResourceNamePlural}} = append({{.SmallResourceNamePlural}}, {{.SmallResourceNameSingular}})
 	return nil
 }
 
-func ({{.ResourceNameSingular}}Dao *{{.ResourceName}}Dao) Get{{.ResourceName}}(id string) (models.{{.ResourceName}}, error) {
+func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Get{{.CapsResourceNameSingular}}(id int64) (models.{{.CapsResourceNameSingular}}, error) {
     if id == "" {
-		return models.{{.ResourceName}}{}, status.Error(codes.InvalidArgument, "id can't be empty")
+		return models.{{.CapsResourceNameSingular}}{}, status.Error(codes.InvalidArgument, "id can't be empty")
 	}
 
-	for _, {{.ResourceNameSingular}} := range {{.ResourceNamePlural}} {
+	for _, {{.ResourceNameSingular}} := range {{.SmallResourceNamePlural}} {
 		if {{.ResourceNameSingular}}.Id == id {
 			return {{.ResourceNameSingular}}, nil
 		}
 	}
 
-	return models.{{.ResourceName}}{}, status.Error(codes.Internal,"something went wrong")
+	return models.{{.CapsResourceNameSingular}}{}, status.Error(codes.Internal,"something went wrong")
 }
 
-func ({{.ResourceNameSingular}}Dao *{{.ResourceName}}Dao) Update{{.ResourceName}}(id string, {{.ResourceNameSingular}} models.{{.ResourceName}}) error {
+func ({{.ResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Update{{.CapsResourceNameSingular}}(id int64, {{.ResourceNameSingular}} models.{{.CapsResourceNameSingular}}) error {
 	if id == "" {
 		return status.Error(codes.InvalidArgument, "id can't be empty")
 	}
 
-	for idx, value := range {{.ResourceNamePlural}} {
+	for idx, value := range {{.SmallResourceNamePlural}} {
 		if value.Id == id {
-			{{.ResourceNamePlural}}[idx] = {{.ResourceNameSingular}}
+			{{.SmallResourceNamePlural}}[idx] = {{.ResourceNameSingular}}
 			return nil
 		}
 	}
 	return status.Error(codes.Internal, "something went wrong")
 }
 
-func ({{.ResourceNameSingular}}Dao *{{.ResourceName}}Dao) Delete{{.ResourceName}}(id string) error {
+func ({{.ResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Delete{{.CapsResourceNameSingular}}(id int64) error {
 	if id == "" {
 		return status.Error(codes.InvalidArgument, "id can't be empty")
 	}
-	for idx, {{.ResourceNameSingular}} := range {{.ResourceNamePlural}} {
+	for idx, {{.ResourceNameSingular}} := range {{.SmallResourceNamePlural}} {
 		if {{.ResourceNameSingular}}.Id == id {
-			{{.ResourceNamePlural}} = append({{.ResourceNamePlural}}[:idx], {{.ResourceNamePlural}}[idx+1:]...)
+			{{.SmallResourceNamePlural}} = append({{.SmallResourceNamePlural}}[:idx], {{.SmallResourceNamePlural}}[idx+1:]...)
 			return nil
 		}
 	}
 	return status.Error(codes.Internal, "something went wrong")
 }
 
-func ({{.ResourceNameSingular}}Dao *{{.ResourceName}}Dao) List{{.ResourceName}}s() ([]models.{{.ResourceName}}, error) {
-	return {{.ResourceNamePlural}}, nil
+func ({{.ResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) List{{.CapsResourceNamePlural}}() ([]models.{{.CapsResourceNameSingular}}, error) {
+	return {{.SmallResourceNamePlural}}, nil
 }
