--- a/frameworks/go-grpc-server/pkg/grpc/server/models/models.go.tmpl
+++ b/frameworks/go-grpc-server/pkg/grpc/server/models/models.go.tmpl
@@ -1,7 +1,7 @@
 package models
 
-type {{.ResourceName}} struct {
-    Id string
+type {{.CapsResourceNameSingular}} struct {
+    Id int64
     {{range $k, $v := .Fields}}
     {{if eq $k "Id"}}
     {{else}}
