--- a/frameworks/go-grpc-server/api/v1/api.proto.tmpl
+++ b/frameworks/go-grpc-server/api/v1/api.proto.tmpl
@@ -5,11 +5,11 @@ option go_package="./api/v1;pb";
 
 service {{ .CapsResourceNameSingular }}Service {
     rpc Ping (Request) returns (Response) {};
-    rpc Create{{ .CapsResourceNameSingular }} (Create{{ .CapsResourceNameSingular }}Request) returns (Create{{ .CapsResourceNameSingular }}Response) {};
-    rpc Get{{ .CapsResourceNameSingular }} (Get{{ .CapsResourceNameSingular }}Request) returns (Get{{ .CapsResourceNameSingular }}Response) {};
-    rpc Update{{ .CapsResourceNameSingular }} (Update{{ .CapsResourceNameSingular }}Request) returns (Update{{ .CapsResourceNameSingular }}Response) {};
-    rpc Delete{{ .CapsResourceNameSingular }} (Delete{{ .CapsResourceNameSingular }}Request) returns (Delete{{ .CapsResourceNameSingular }}Response) {};
-    rpc List{{ .CapsResourceNameSingular }}s (List{{ .CapsResourceNameSingular }}sRequest) returns (List{{ .CapsResourceNameSingular }}sResponse) {};
+    rpc Create{{.CapsResourceNameSingular}} (Create{{.CapsResourceNameSingular}}Request) returns (Create{{.CapsResourceNameSingular}}Response) {};
+    rpc Get{{.CapsResourceNameSingular}} (Get{{.CapsResourceNameSingular}}Request) returns (Get{{.CapsResourceNameSingular}}Response) {};
+    rpc Update{{.CapsResourceNameSingular}} (Update{{.CapsResourceNameSingular}}Request) returns (Update{{.CapsResourceNameSingular}}Response) {};
+    rpc Delete{{.CapsResourceNameSingular}} (Delete{{.CapsResourceNameSingular}}Request) returns (Delete{{.CapsResourceNameSingular}}Response) {};
+    rpc List{{.CapsResourceNamePlural}} (List{{.CapsResourceNamePlural}}Request) returns (List{{.CapsResourceNamePlural}}Response) {};
 }
 
 message {{.CapsResourceNameSingular}} {
@@ -17,45 +17,45 @@ message {{.CapsResourceNameSingular}} {
     {{$value}} {{$key}} = {{counter}};{{end}}
 }
 
-message Create{{ .CapsResourceNameSingular }}Request {
+message Create{{.CapsResourceNameSingular}}Request {
     {{.CapsResourceNameSingular}} {{.ResourceNameSingular}} = 1;
 }
 
-message Create{{ .CapsResourceNameSingular }}Response {
+message Create{{.CapsResourceNameSingular}}Response {
     string message = 1;
 }
 
-message Get{{ .CapsResourceNameSingular }}Request {
+message Get{{.CapsResourceNameSingular}}Request {
     string id = 1;
 }
 
-message Get{{ .CapsResourceNameSingular }}Response {
+message Get{{.CapsResourceNameSingular}}Response {
     {{.CapsResourceNameSingular}} {{.ResourceNameSingular}} = 1;
 }
 
-message Update{{ .CapsResourceNameSingular }}Request {
+message Update{{.CapsResourceNameSingular}}Request {
     string id = 1;
     {{.CapsResourceNameSingular}} {{.ResourceNameSingular}} = 2;
 }
 
-message Update{{ .CapsResourceNameSingular }}Response {
+message Update{{.CapsResourceNameSingular}}Response {
     string message = 1;
 }
 
-message Delete{{ .CapsResourceNameSingular }}Request {
+message Delete{{.CapsResourceNameSingular}}Request {
     string id = 1;
 }
 
-message Delete{{ .CapsResourceNameSingular }}Response {
+message Delete{{.CapsResourceNameSingular}}Response {
     string message = 1;
 }
 
-message List{{ .CapsResourceNameSingular }}sRequest {
+message List{{.CapsResourceNamePlural}}Request {
 
 }
 
-message List{{ .CapsResourceNameSingular }}sResponse {
-    repeated {{.CapsResourceNameSingular}} {{.ResourceNameSingular}} = 1;
+message List{{.CapsResourceNamePlural}}Response {
+    repeated {{.CapsResourceNameSingular}} {{.SmallResourceNameSingular}} = 1;
 }
 
 message Request {}
